@@ -1,3 +1,11 @@
 language: python
-install: make configure develop
-script: make test
+env:
+  - TOXENV=py27
+  - TOXENV=py33
+  - TOXENV=flake8
+  - TOXENV=healthcheck
+  - TOXENV=sphinx
+install:
+  - pip install tox
+script:
+  - tox
