@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,flake8,sphinx
+envlist = py27,py33,flake8,sphinx,healthcheck
 
 [testenv]
 deps =
@@ -24,9 +24,11 @@ commands =
 deps =
     nose
     rednose
-    sphinxcontrib-testbuild
+    Sphinx
 commands =
-    nosetests --config=etc/nose.cfg sphinxcontrib.testbuild.tests
+    make --directory docs clean html
+whitelist_externals =
+    make
 
 [testenv:healthcheck]
 deps =
